fixing gap between sections hopefully

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -3,7 +3,7 @@
   text-align:center;
   margin:auto;
   display: inline-block;
-  margin-bottom: -7px;
+  margin-bottom: 0px;
 }
 
 
